# echo

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.py  config.yaml.example  echo.spec  launcher.py  pyproject.toml  sidecar.spec
.github/workflows/: release.yml
backend/: config.py  exam_logic.py  file_conversion.py  llm_client.py  main.py  models.py  omni_client.py  paths.py  speech_client.py
backend/exams/: converted_test.yaml
backend/prompts/: file_conversion.txt  read_aloud_grading.txt  text_to_speech.txt  translation_grading.txt
exams/: exam-2098.yaml  exam-2099.yaml  sample_exam.yaml
frontend/: API_DOCUMENTATION.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.js  main.ts  translations.js  translations.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: AudioTest.vue  FileConverter.vue  HomePage.vue  InstructionPage.vue  MultipleChoice.vue  QuickResponse.vue  ReadAloud.vue  Results.vue  Settings.vue  Translation.vue
frontend/src/composables/: useTranslations.js  useTranslations.ts
frontend/src/types/: api.ts  lamejs.d.ts
frontend/src/utils/: api.js  api.ts  mp3Recorder.js  mp3Recorder.ts  updater.ts
prompts/: file_conversion.txt  multiple_choice_grading.txt  quick_response_grading.txt
scripts/: build_sidecar.py
