[project]
name = "echo"
version = "0.2.0"
description = "LLM-powered English+Math exam platform for Chinese kids"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "websockets>=12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "aiohttp>=3.9.0",
    "soundfile>=0.13.1",
    "json-repair>=0.51.0",
    "pypdf2>=3.0.1",
    "pillow>=11.3.0",
    "markdown>=3.9",
    "pdf2image>=1.17.0",
    "pyinstaller>=6.16.0",
]
